chapter-09-debugging-kubernetes/network-debugging/netshoot-debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: net-debugger
  namespace: debug
spec:
  containers:
  - name: net-toolbox
    image: nicolaka/netshoot
    command: ["sleep", "3600"]
    securityContext:
      capabilities:
        add: ["NET_ADMIN"]
