chapter-09-debugging-kubernetes/network-debugging/networkpolicy-example.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-producer-to-kafka
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      app: kafka
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kafka-producers
